--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.3",
     "mongoose-validation-error-transform": "^0.0.6",
     "nodemon": "^2.0.22",
     "password-validator": "^5.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "^5.0.1",
     "sass": "^1.60.0"
   }
 }
